# birthday-reminder

./: Cargo.toml  README.md  example_birthdays.csv
.devcontainer/: devcontainer.json
src/: main.rs
