[package]
name = "birthday-reminder"
version = "0.1.0"
authors = ["Piotr Pasza Storożenko <piotr.pasza.storozenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = {version = "0.4", features = ["serde"]}
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
